--- a/SkillSnap.Client/Pages/Home.razor
+++ b/SkillSnap.Client/Pages/Home.razor
@@ -5,3 +5,15 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<div class="container my-5">
+    <div class="row">
+        <div class="col-lg-4">
+            <ProfileCard />
+        </div>
+        <div class="col-lg-8">
+            <ProjectList />
+            <SkillTags />
+        </div>
+    </div>
+</div>
